--- a/SutraCD.css
+++ b/SutraCD.css
@@ -19,7 +19,7 @@ a{
 
 .top-wrapper{
   padding: 180px 0 100px 0;
-  background-image: url(D:/img/Pg_top.png);
+  background-image: url(Pg_top.png);
   background-size: cover;
   color: white;
   text-align: center;
